@@ -10,6 +10,8 @@
 	http://www.python.org/pypi/pickleshare
 	
 	* hooks.py: Two new hooks, 'shutdown_hook' and 'late_startup_hook'.
+	
+	* aliases can now be %store'd
 
 2006-01-29  Fernando Perez  <Fernando.Perez@colorado.edu>
 
